--- a/a.html
+++ b/a.html
@@ -15,7 +15,7 @@
 <video  class="lang-video"  autoplay loop muted
 
         @contextmenu.prevent>
-    <source src="https://samf-oa.oss-cn-hangzhou.aliyuncs.com/16776545746915570616.mp4" type="video/mp4">
+    <source src="https://static.yximgs.com/udata/pkg/fe/kwai_video.a7616d99.mp4" type="video/mp4">
 </video>
 
 </body>
